# Image_Stitching

./: CMakeLists.txt  README.md  package.xml
include/: descriptor.h  error_filter.h  extractor.h  imgproc.h  opencv_setting.h  outlier_rejection.h  parallax.h  paramsetting.h  preprocessing.h  stitch.h  utility.h  visualization.h  warping.h
launch/: multi_cam.launch
launch/includes/: front_cam.json  front_cam2.json  left_cam.json
src/: stitching.cpp
